# fisher-scoring

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/fisher_scoring/: __init__.py  fisher_scoring_focal.py  fisher_scoring_logistic.py  fisher_scoring_multinomial.py  fisher_scoring_poisson.py  fisher_scoring_robust.py  utils.py
tests/: __init__.py  test_fisher_scoring_focal.py  test_fisher_scoring_logistic.py  test_fisher_scoring_multinomial.py  test_fisher_scoring_poisson.py  test_fisher_scoring_robust.py  test_utils.py
