[tool.poetry]
name = "fisher-scoring"
version = "0.1.0"
description = "A Python implementation of the Fisher Scoring algorithm for logistic regression, multinomial regression, and focal loss regression."
authors = ["xRiskLab <your-email@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/xRiskLab/fisher-scoring"
repository = "https://github.com/xRiskLab/fisher-scoring"
keywords = ["fisher scoring", "logistic regression", "focal loss", "multinomial regression"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
packages = [
    { include = "fisher_scoring", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.1"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
black = "^24.4.2"
isort = "^5.13.2"
pylint = "^3.2.6"
pytest = "^8.3.2"
rich = "^13.7.1"
fixit = "^2.1.0"
pytest-mock = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"