[tool.poetry]
name = "fisher-scoring"
version = "2.0.1"
description = "A Python implementation of the Fisher Scoring algorithm for logistic regression, multinomial regression, and focal loss regression, with optimized matrix operations for speed and efficiency."
authors = ["xRiskLab <contact@xrisklab.ai>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/xRiskLab/fisher-scoring"
repository = "https://github.com/xRiskLab/fisher-scoring"
keywords = ["fisher scoring", "logistic regression", "focal loss", "multinomial regression"]
classifiers = [
    "Development Status :: 5 - Production/Stable",  # Adjust if stable
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
packages = [
    { include = "fisher_scoring", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.19.5"
pandas = "^2.2.2"
scikit-learn = "^1.3.0"
black = "^24.4.2"
isort = "^5.13.2"
pylint = "^3.2.6"
pytest = "^8.3.2"
rich = "^13.7.1"
fixit = "^2.1.0"
pytest-mock = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"